<resources>
    <string name="app_name">CarFleet</string>
    <string name="password">Password</string>
    <string name="username">username</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered</string>
    <string name="register">Register</string>
    <string name="not_registered1">Not Registered?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="hello_world">Hello from CarFleet!</string>
    <string name="email">Email</string>
    <string name="back_to_login">Back to Login</string>
    <string name="not_registered_yet">Not Registered Yet?</string>
    <string name="create_group">Create group</string>
    <string name="settings">Settings</string>
    <string name="my_profile">My profile</string>
    <string name="Open">NavBar</string>
    <string name="Close">NavBar</string>
    <string name="swipe_left_to_see_nav_bar">Swipe Left To See Nav Bar</string>
    <string name="title_activity_car">CarActivity</string>
</resources>
